--- a/index.html
+++ b/index.html
@@ -25,68 +25,26 @@
 <h2>What this server offers:</h2>
 <ul>
     <li>2 gen 8 sysbot</li>
-    <li>2 gen 7 genning botss</li>
+    <li>A gen 7 genners</li>
     <li>A pokemon light platinum streamer</li>
     <li>We also have multiple bots that can make life easier for you below for your interest</li>
-    <li>A LGPE sysbot<li>
-    <li>2 BDSP sysbots<li>
     
 <h2>What bots that we provide:</h2>
 <ol>
     <li>Nurse joy:Registers your friend codes for switch,wii,ds and much more</li>
-    <li>Myrtwo and obi-wan keno bot are our gen 8 sysbots with your pokemon showdown imports can generate 
-        your pokemon within a few minutes(Must have nintendo online for trading to work) and they same with with our BDSP bots</li>
+    <li>Ash ketchum and obi-wan keno bot are our gen 8 sysbots with your pokemon showdown imports can generate 
+        your pokemon within a few minutes(Must have nintendo online for trading to work)</li>
     <li>Poketwo is a bot that starts your own pokemon adventure with realistic battles,trading,selling and catching pokemon</li>
+    <li>Mee6 luanches countless commands for you for example searching a pokemon or finding an anime</li>
     <li>Wick is our security bot that protects the server from raids,nuking and scams</li>
-    <li>Zeraora is this server's custom bot that preforms as a mod bot</li>
-    <li>Zeraora GTS and nebby are our 2 GTS bots that trade on the gen 7 GTS without your ds crashing for fake trades<li>
+    <li>Zeraora is this server's custom bot that also protects from nuking and raids,it can also preform as a moderation bot and sometimes a sysbot</li>
+</ol>
+
 <h3>Why you should join this server:</h3>
     <li>We are a friendly growing server and we would try help if you ever encounter any problems in the server or with the bots</li>
     <li>We have a good choice in bots that can entertain you or help you with your activities</li>
     <style>
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-}
-
-.button1:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-}
-
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-
-
 </style>
 </head>
-</body>
-<body>
-
-<button class="button button1">Green</button>
-<button class="button button2">Blue</button>
-
 </body>
 </html>
