--- a/index.html
+++ b/index.html
@@ -25,24 +25,21 @@
 <h2>What this server offers:</h2>
 <ul>
     <li>2 gen 8 sysbot</li>
-    <li>A gen 7 genners</li>
-    <li>A pokemon light platinum streamer</li>
+    <li>2 BDSP sysbots</li>
+    <li>Streamers</li>
     <li>We also have multiple bots that can make life easier for you below for your interest</li>
     
 <h2>What bots that we provide:</h2>
 <ol>
-    <li>Nurse joy:Registers your friend codes for switch,wii,ds and much more</li>
-    <li>Ash ketchum and obi-wan keno bot are our gen 8 sysbots with your pokemon showdown imports can generate 
+    <li>Nurse joy:Regsters your friend codes for switch,wii,ds and much more</li>
+    <li>Myrtwo and obi-wan keno bot are our gen 8 sysbots with your pokemon showdown imports can generate 
         your pokemon within a few minutes(Must have nintendo online for trading to work)</li>
     <li>Poketwo is a bot that starts your own pokemon adventure with realistic battles,trading,selling and catching pokemon</li>
-    <li>Mee6 luanches countless commands for you for example searching a pokemon or finding an anime</li>
-    <li>Wick is our security bot that protects the server from raids,nuking and scams</li>
-    <li>Zeraora is this server's custom bot that also protects from nuking and raids,it can also preform as a moderation bot and sometimes a sysbot</li>
-</ol>
+    <li>Myrto and kiwi the wiki are our BDSP syhsbots which also need nintendo switch online to work</li>
+    <li>Zeraora is our server's custom bot that also protects from nuking and raids</li>
+        <li><a href="https://www.youtube.com/watch?v=cGw-8FrRT1E">click here to learn how to use the bots
+</ol> 
 
-<h3>Why you should join this server:</h3>
-    <li>We are a friendly growing server and we would try help if you ever encounter any problems in the server or with the bots</li>
-    <li>We have a good choice in bots that can entertain you or help you with your activities</li>
     <style>
 </style>
 </head>
