--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li>Poketwo is a bot that starts your own pokemon adventure with realistic battles,trading,selling and catching pokemon</li>
     <li>Myrto and kiwi the wiki are our BDSP syhsbots which also need nintendo switch online to work</li>
     <li>Zeraora is our server's custom bot that also protects from nuking and raids</li>
-        <li><a href="https://www.youtube.com/watch?v=cGw-8FrRT1E">click here to learn how to use the bots
+        <li><a href="https://www.youtube.com/watch?v=cGw-8FrRT1E">click here to enter our help page and learn how to use our bots
 </ol> 
 
     <style>
